syntax="proto3";

package pb;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


option go_package = "Email/pb/users";

message UserInformationRequest {
    string email = 1;
}

message UserInformationResponse{
    string email = 1;
    string frist_name = 2;
    string last_name = 3;
    string phone_number = 4;
}


service UserService {
    rpc UserInformations (UserInformationRequest) returns (UserInformationResponse){
        option (google.api.http) ={
            get: "/users/informations",
        };
    }
}